--- a/mood-tracker-api/package.json
+++ b/mood-tracker-api/package.json
@@ -17,7 +17,7 @@
     "@google/generative-ai": "^0.24.1",
     "@types/node": "^24.10.0",
     "axios": "^1.13.2",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
-    "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
