--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -23,10 +23,6 @@ jobs:
     name: Run Tests
     runs-on: ubuntu-latest
     
-    defaults:
-      run:
-        working-directory: mood-tracker-api
-    
     # テスト用PostgreSQLサービスコンテナ
     services:
       postgres:
@@ -53,22 +49,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: mood-tracker-api/package-lock.json
       
       # 依存関係のインストール
       - name: Install dependencies
+        working-directory: mood-tracker-api
         run: npm ci
       
       # テスト用データベースのセットアップ
       - name: Setup test database
         run: |
-          PGPASSWORD=postgres psql -h localhost -U postgres -d mood_tracker_test -f ../Deployment/migration.sql
+          PGPASSWORD=postgres psql -h localhost -U postgres -d mood_tracker_test -f Deployment/migration.sql
         env:
           PGPASSWORD: postgres
       
       # ユニットテストの実行
       - name: Run unit tests
+        working-directory: mood-tracker-api
         run: npm test
         env:
           CI: true
@@ -78,6 +74,7 @@ jobs:
       
       # テストカバレッジレポートの生成
       - name: Generate coverage report
+        working-directory: mood-tracker-api
         run: npm run test:coverage
         env:
           CI: true
@@ -100,10 +97,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     
-    defaults:
-      run:
-        working-directory: mood-tracker-api
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -112,13 +105,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: mood-tracker-api/package-lock.json
       
       - name: Install dependencies
+        working-directory: mood-tracker-api
         run: npm ci
       
       - name: Build application
+        working-directory: mood-tracker-api
         run: npm run build
         env:
           CI: true
