--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -23,9 +23,21 @@ jobs:
     name: Run Tests
     runs-on: ubuntu-latest
     
-    defaults:
-      run:
-        working-directory: mood-tracker-app
+    # E2Eテスト用にバックエンドとデータベースを起動
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: mood_tracker_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     
     steps:
       # リポジトリのチェックアウト
@@ -37,27 +49,63 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: mood-tracker-app/package-lock.json
       
-      # 依存関係のインストール
-      - name: Install dependencies
+      # フロントエンドの依存関係インストール
+      - name: Install frontend dependencies
+        working-directory: mood-tracker-app
         run: npm ci
       
       # ユニットテストの実行
       - name: Run unit tests
+        working-directory: mood-tracker-app
         run: npm run test:unit
         env:
           CI: true
       
+      # バックエンドのセットアップ（E2Eテスト用）
+      - name: Install backend dependencies
+        working-directory: mood-tracker-api
+        run: npm ci
+      
+      - name: Setup test database
+        run: |
+          PGPASSWORD=postgres psql -h localhost -U postgres -d mood_tracker_test -f Deployment/migration.sql
+        env:
+          PGPASSWORD: postgres
+      
+      - name: Build backend
+        working-directory: mood-tracker-api
+        run: npm run build
+      
+      - name: Start backend API
+        working-directory: mood-tracker-api
+        run: |
+          npm start &
+          echo $! > backend.pid
+        env:
+          NODE_ENV: test
+          PORT: 3000
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/mood_tracker_test
+          JWT_SECRET: test-secret-key-for-ci
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
+          WEATHER_API_URL: https://api.weatherapi.com/v1
+      
+      - name: Wait for backend to be ready
+        run: |
+          timeout 30 bash -c 'until curl -f http://localhost:3000 > /dev/null 2>&1; do sleep 1; done'
+      
       # E2Eテストの実行
       - name: Install Playwright browsers
+        working-directory: mood-tracker-app
         run: npx playwright install --with-deps
       
       - name: Run E2E tests
+        working-directory: mood-tracker-app
         run: npm run test:e2e
         env:
           CI: true
+          VITE_API_URL: http://localhost:3000
       
       # テスト結果のアーティファクト保存
       - name: Upload test results
@@ -83,10 +131,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     
-    defaults:
-      run:
-        working-directory: mood-tracker-app
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -95,13 +139,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: mood-tracker-app/package-lock.json
       
       - name: Install dependencies
+        working-directory: mood-tracker-app
         run: npm ci
       
       - name: Build application
+        working-directory: mood-tracker-app
         run: npm run build
         env:
           CI: true
