--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -22,7 +22,7 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
-    
+
     # テスト用PostgreSQLサービスコンテナ
     services:
       postgres:
@@ -38,30 +38,30 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-    
+
     steps:
       # リポジトリのチェックアウト
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       # Node.js環境のセットアップ
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      
+
       # 依存関係のインストール
       - name: Install dependencies
         working-directory: mood-tracker-api
         run: npm ci
-      
+
       # テスト用データベースのセットアップ
       - name: Setup test database
         run: |
-          PGPASSWORD=postgres psql -h localhost -U postgres -d mood_tracker_test -f Deployment/migration.sql
+          PGPASSWORD=postgres psql -h localhost -U postgres -d mood_tracker_test -f Deployment/database/migration.sql
         env:
           PGPASSWORD: postgres
-      
+
       # ユニットテストの実行
       - name: Run unit tests
         working-directory: mood-tracker-api
@@ -71,7 +71,7 @@ jobs:
           NODE_ENV: test
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/mood_tracker_test
           JWT_SECRET: test-secret-key-for-ci
-      
+
       # テストカバレッジレポートの生成
       - name: Generate coverage report
         working-directory: mood-tracker-api
@@ -81,7 +81,7 @@ jobs:
           NODE_ENV: test
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/mood_tracker_test
           JWT_SECRET: test-secret-key-for-ci
-      
+
       # カバレッジレポートのアーティファクト保存
       - name: Upload coverage report
         if: always()
@@ -96,20 +96,20 @@ jobs:
     name: Build Check
     runs-on: ubuntu-latest
     needs: test
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      
+
       - name: Install dependencies
         working-directory: mood-tracker-api
         run: npm ci
-      
+
       - name: Build application
         working-directory: mood-tracker-api
         run: npm run build
