--- a/mood-tracker-api/tsconfig.json
+++ b/mood-tracker-api/tsconfig.json
@@ -14,5 +14,10 @@
     "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts",
+    "**/__tests__/**",
+    "dist"
+  ]
 }
