--- a/mood-tracker-api/package.json
+++ b/mood-tracker-api/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@types/node": "^24.10.1",
+    "@types/node-cache": "^4.1.3",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
@@ -30,12 +32,14 @@
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cache": "^5.1.2",
     "pg": "^8.16.3",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.19",
     "@types/csurf": "^1.11.5",
