--- a/mood-tracker-api/package.json
+++ b/mood-tracker-api/package.json
@@ -8,9 +8,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "migrate": "ts-node src/scripts/migrate.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -48,6 +48,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^7.0.3",
     "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
