--- a/mood-tracker-api/tsconfig.json
+++ b/mood-tracker-api/tsconfig.json
@@ -11,13 +11,20 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
+    "types": ["node"],
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/types/**/*"],
   "exclude": [
     "node_modules",
-    "**/*.test.ts",
-    "**/__tests__/**",
     "dist"
-  ]
+  ],
+  "ts-node": {
+    "files": true,
+    "transpileOnly": false,
+    "compilerOptions": {
+      "types": ["node"],
+      "typeRoots": ["./node_modules/@types", "./src/types"]
+    }
+  }
 }
