--- a/mood-tracker-api/package.json
+++ b/mood-tracker-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.json",
     "start": "node dist/index.js",
     "migrate": "ts-node src/scripts/migrate.ts",
     "test": "cross-env NODE_ENV=test jest",
@@ -18,8 +18,16 @@
   "type": "commonjs",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.19",
+    "@types/csurf": "^1.11.5",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/node-cache": "^4.1.3",
+    "@types/pg": "^8.15.6",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -38,15 +46,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/compression": "^1.7.5",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.19",
-    "@types/csurf": "^1.11.5",
-    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.3",
     "cross-env": "^7.0.3",
     "jest": "^30.2.0",
